# GooFit

./: .astylerc  .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .syntastic_cpp_config  .travis.yml  2d__plot_8cpp.html  2d__plot_8cpp_source.html  2d__plot_8cu.html  2d__plot_8cu_source.html  AGENTS.md  Added LASS to ResonanceThrustFunctor  BernsteinPdf.ipynb  BinnedDataSet.cc  BinnedDataSet.hh  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DataSet.cc  DataSet.hh  Doxyfile  Faddeeva.cc  FitControl.cc  FitControl.hh  FitManager.cc  FitManager.hh  FitManagerMinuit1.cc  FitManagerMinuit1.hh  FitManagerMinuit2.hh  FitManagerMinuit3.cc  FitManagerMinuit3.hh  FunctorBase.cc  FunctorBase.cu  FunctorBase.hh  FunctorWriter.cc  FunctorWriter.hh  GlobalCudaDefines.hh  (+1371 more)
MCBooster/: .gitignore  .gitrepo  CMakeLists.txt  INSTALL.md  README.md  THANKS.md
MCBooster/cmake/: FindCudaArch.cmake
MCBooster/doc/: Doxyfile  Doxyfile.in
MCBooster/mcbooster/: Config.h  Evaluate.h  EvaluateArray.h  GContainers.h  GFunctional.h  GTypes.h  Generate.h  MCBooster.h  Vector3R.h  Vector4R.h  strided_iterator.h
MCBooster/src/: CompareWithTGenPhaseSpace.cu  Generate.cpp  Generate.cu  GenerateSample.cu  PerformanceTest.cpp  PerformanceTest.cu
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.examples.common  RunAll.py  int_testing.py  simpleFitExample.cu
examples/2d_plot/: .gitignore  2d_plot.cpp  2d_plot.cu  CMakeLists.txt  Makefile
examples/B2KKK/: B2KKK.cpp  CMakeLists.txt
examples/B2KKK_SqDP/: BToKKK.cpp  CMakeLists.txt  FitFractions  GenFit3K.cc  README  compareResult.C
examples/B2KKpi_SqDP/: BToKKpi.cpp  CMakeLists.txt  GenFitkkpiCP_R2_10422.cc  compareResult.C  plots.C
examples/B2PPP_SqDP/: BToPPP.cpp  CMakeLists.txt
examples/B2PPP_SqDP_SIMFit/: BToPPP.cpp  CMakeLists.txt  quantileBinningSwave.py
examples/D2KKK/: CMakeLists.txt  D2KKK.cpp
examples/D2PPP/: CMakeLists.txt  D2PPP.cpp
examples/DP4/: CMakeLists.txt  DP4.cu  Makefile  mcevents.cpp  plot.py
examples/Legendre/: CMakeLists.txt  Legendre.cpp
examples/SigGen/: CMakeLists.txt  Makefile  SigGen.cpp  SigGen.cu  generator.cu  matplotlibrc  plot.py
examples/TDDP4/: .gitignore  CMakeLists.txt  Makefile  TDDP4.cu  tddp4.cu
examples/TDDP4WeightedMC/: CMakeLists.txt  FitToy.cu  GenerateToy.cu  ToyModel.cu  ToyModel.h  draw_fit.py
examples/addition/: CMakeLists.txt  Makefile  addition.cpp  addition.cu  addition.py.autosave
examples/chebyshev/: CMakeLists.txt  chebyshev.cpp
examples/chisquare/: CMakeLists.txt  Makefile  chisquare.cpp  chisquare.cu
examples/convolution/: CMakeLists.txt  Makefile  convolution.cpp  convolution.cu
examples/dalitz/: CMakeLists.txt  DalitzFit.cu  Makefile  README  README.md  dalitz.cpp  dalitz.cu
examples/exponential/: CMakeLists.txt  GSLexponential.cpp  Makefile  exponential.cpp  exponential.cu  exponential1.cpp  exponential1.cu  exponential2.cpp  exponential2.cu
examples/kmatrix/: CMakeLists.txt  kmatrix.cpp
examples/mipwa/: CMakeLists.txt  PiPiPi_PWA_COEFFS_30_SAda_ampphs.txt  README.md
examples/pipipi0DPFit/: .gitignore  CMakeLists.txt  Makefile  MixFit.cu  README  README.md  pipipi0DPFit.cpp  pipipi0DPFit.cu
examples/poisson/: CMakeLists.txt  poisson.cpp
examples/product/: CMakeLists.txt  Makefile  product.cpp  product.cu
examples/simpleFit/: CMakeLists.txt  Makefile  simpleFit.cpp  simpleFit.cu  simpleFitExample.cu
examples/zachFit/: .gitignore  CMakeLists.txt  Makefile  README  README.md  zachFit.cpp  zachFit.cu
k3pi_goofit_scripts/: 6D_normalisation_studies.py  CMakeLists.txt  ChristophModel.cu  ChristophModel.h  WS_model_fit.cu  WS_model_gen.cu  amp4body_TD_example.py  amp4body_td_cpp_comparision.ipynb  cpp_amp4body_TD_example.cu  cpp_python_amp4body_td_example.cu  fit_realistic_amp4body_TD.py  generate_k3pi_reference.py  plot_normalisation_studies.py  plot_pdf_lineshapes.py
python/: BinnedDataSet.cpp  CMakeLists.txt  DataSet.cpp  FitManager.cpp  PdfBase.cpp  Print.cpp  UnbinnedDataSet.cpp  Variable.cpp  goofit.cpp  make_docs_header.cmake  pygoofit.cpp
python/Minuit2/: CMakeLists.txt  FCNBase.cpp  FunctionMinimum.cpp  MinuitParameter.cpp  MnApplication.cpp  MnMigrad.cpp  MnMinos.cpp  MnPrint.cpp  MnScan.cpp  MnUserCovariance.cpp  MnUserParameterState.cpp  MnUserParameters.cpp  main.cpp  setup.py
python/PDFs/: CMakeLists.txt  CombinePdf.cpp  ExpPdf.cpp  GooPdf.cpp  GooPdf.cu  GooPdfBkgSub.cpp
python/examples/: B2KKK_Simple.ipynb  B2KKK_Simple.py  DP4.py  DP4_ROOT.py  Interactive 1D example.ipynb  Interactive Dalitz example.ipynb  RunAll.sh  SigGen.py  SimpleDoubleGaussian.ipynb  TDDP4.py  TDDP4_ROOT.py  addition.py  big_convolution.py  chisquare.py  convolution.py  dalitz.py  dalitz_bkgsub.py  exponential.py  generate_sig_example.py  kMatrix_D3pi.py  kMatrix_D3pi_SquareDalitzEff.py  kMatrix_example.py  plot_2d.py  product.py  quad1f.py  requirements.txt  simpleFit.py  simplefit.py  simplefit_TD.py  zachFit.py
python/extras/: landau.cpp
python/goofit/: Abort.cpp  Application.cpp  Application.cu  BinnedDataSet.cpp  CMakeLists.txt  DataSet.cpp  FitControl.cpp  FitManager.cpp  HelpPrinter.cpp  MonteCarlo.cpp  PdfBase.cpp  UnbinnedDataSet.cpp  Variable.cpp  Version.cpp  Workspace.cpp  goofit.cpp  props.h
python/tests/: test_comb_conv.py  test_exp.py  test_min_conv.py
src/PDFs/: AddPdf.cu  BWPdf.cu  (+46 more)
tests/: ArgusTest.cpp  ArgusTest.cu  BWTest.cpp  BWTest.cu  BifurGaussTest.cu  BinTransformTest.cpp  BinTransformTest.cu  BinnedTest.cu  BlindTest.cu  CMakeLists.txt  CompositeTest.cu  ConvolutionTest.cu  CorrGaussianTest.cu  CrystalBallTest.cpp  CrystalBallTest.cu  EventWeightedAddTest.cu  ExpGaussTest.cpp  ExpGaussTest.cu  ExpTest.cpp  ExpTest.cu  GaussianTest.cpp  GaussianTest.cu  IncoherentSumTest.cu  InterHistTest.cpp  InterHistTest.cu  JohnsonSUTest.cu  KinLimitBWTest.cpp  KinLimitBWTest.cu  LandauTest.cu  MappedTest.cu  Minuit1Test.cpp  Minuit1Test.cu  MonteCarloTest.cpp  MonteCarloTest.cu  NormalizeTest.cpp  NormalizeTest.cu  NovosibirskTest.cpp  NovosibirskTest.cu  PolynomialTest.cpp  PolynomialTest.cu  (+15 more)
(+1250 files in other folders)
